--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   font-size: 1.1rem;
 }
 .btn{
-  width: 10%;
+  width:auto;
   height: 30px;
   border-radius: 5px;
   font-size: 1.1rem;
@@ -52,28 +52,31 @@
   padding: 10px;
 }
 .task{
-  /* background-color:  rgb(255, 72, 72); */
+  background-color:rgb(173, 173, 173);
   display: flex;
   justify-content: flex-start;
   align-items: center;
   min-height: 50px;
   margin-bottom: 10px;
+  color: black;
 }
 .task-true{
-  background-color: rgb(0, 194, 0);
+  background-color: rgb(118, 255, 118);
   display: flex;
   justify-content: flex-start;
   align-items: center;
   min-height: 50px;
   margin-bottom: 10px;
+  color: black;
 }
 .task-false{
-  background-color: rgb(255, 72, 72);
+  background-color: rgb(255, 120, 120);
   display: flex;
   justify-content: flex-start;
   align-items: center;
   min-height: 50px;
   margin-bottom: 10px;
+  color: black;
 }
 .task-time{
   margin: 0 0 0 1%!important;
@@ -87,14 +90,18 @@
   justify-content: center;
   align-items: center;
 }
-.task-text{
+.task-text {
+  /* border: 1px solid blanchedalmond; */
   margin: 0 !important;
   width: 70%;
-  height: 30px;
-  font-size: 1.1rem;
+  min-height: 30px;
+  font-size: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  white-space: normal; 
+  overflow-wrap: break-word;
+
 }
 .task-icon{
   margin: 0 1% 0 0 !important;
